fix broken ezoo link and artist name

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     </div>
                     <div>    
                         <a href="https://open.spotify.com/artist/6fcTRFpz0yH79qSKfof7lp?si=TibdKgWjTLKFd146xzAmuA"><img class="artist" src="./images/lions.jpeg" alt="lions"></a>
-                        <div class="artistname">7 Lions</div>
+                        <div class="artistname">Seven Lions</div>
                     </div>
                     <div>
                         <a href="https://open.spotify.com/album/7n5FErCSkbQ4g2TZXKU6GD?si=Xo5ag3WgSmyv2rnHhjCcXA"><img class="artist" src="./images/sponge.jpg" alt="patrick star"></a>
